clang/test/BSC/Negative/Ownership/ArrayElem/arrayelem_safe_malloc_free_api/arrayelem_safe_malloc_free_api.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Safe int *_Owned _ArrayElem safe_malloc_array(unsigned long size, int init);
_Safe void safe_free_array(int *_Owned _ArrayElem p); // expected-note {{passing argument to parameter 'p' here}}

_Safe void bad_assignments(void) {
  int *_Owned p = safe_malloc_array(3, 1); // expected-error {{conversion from type 'int *_Owned _ArrayElem' to 'int *_Owned' is forbidden in the safe zone}}
  int *raw = safe_malloc_array(3, 1); // expected-error {{conversion from type 'int *_Owned _ArrayElem' to 'int *' is forbidden in the safe zone}}
  (void)p;
  (void)raw;
}

_Safe void bad_free_arg(int *_Owned p) {
  safe_free_array((int *_Owned _ArrayElem)p); // expected-error {{conversion from type 'int *_Owned' to 'int *_Owned _ArrayElem' is forbidden in the safe zone}}
}

_Safe void bad_free_raw(int *p) {
  safe_free_array((int *_Owned _ArrayElem)p); // expected-error {{conversion from type 'int *' to 'int *_Owned _ArrayElem' is forbidden in the safe zone}}
}

_Unsafe void bad_unsafe_cast_to_raw(void) {
  int *_Owned _ArrayElem p = safe_malloc_array(2, 1);
  int *raw = (int *)p; // expected-error {{cannot cast between _Owned _ArrayElem and raw pointer; use __move_array_to_raw or __take_array_from_raw for ownership transfer}}
  (void)raw;
}

_Safe void bad_multi_level_api_args(void) {
  int **_Owned _ArrayElem pp = safe_malloc_array(2, 0); // expected-error {{conversion from type 'int *_Owned _ArrayElem' to 'int **_Owned _ArrayElem' is forbidden in the safe zone}}
  safe_free_array(pp); // expected-error {{conversion from type 'int **_Owned _ArrayElem' to 'int *_Owned _ArrayElem' is forbidden in the safe zone}}
}
